[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/atlas/kirby/kirby_atlas4.tres" type="Texture" id=1]
[ext_resource path="res://assets/atlas/kirby/kirby_atlas5.tres" type="Texture" id=2]
[ext_resource path="res://assets/atlas/kirby/kirby_atlas.tres" type="Texture" id=3]
[ext_resource path="res://assets/atlas/kirby/kirby_atlas2.tres" type="Texture" id=4]
[ext_resource path="res://assets/atlas/kirby/kirby_atlas3.tres" type="Texture" id=5]
[ext_resource path="res://assets/atlas/kirby/kirby_atlas6.tres" type="Texture" id=6]
[ext_resource path="res://assets/atlas/kirby/kirby_atlas7.tres" type="Texture" id=7]
[ext_resource path="res://assets/atlas/kirby/kirby_atlas9.tres" type="Texture" id=8]
[ext_resource path="res://assets/atlas/kirby/kirby_atlas13.tres" type="Texture" id=9]
[ext_resource path="res://assets/atlas/kirby/kirby_atlas8.tres" type="Texture" id=10]
[ext_resource path="res://assets/atlas/kirby/kirby_atlas17.tres" type="Texture" id=11]
[ext_resource path="res://assets/atlas/kirby/kirby_atlas12.tres" type="Texture" id=12]
[ext_resource path="res://assets/atlas/kirby/kirby_atlas10.tres" type="Texture" id=13]
[ext_resource path="res://assets/atlas/kirby/kirby_atlas11.tres" type="Texture" id=14]
[ext_resource path="res://assets/atlas/kirby/kirby_atlas14.tres" type="Texture" id=15]
[ext_resource path="res://assets/atlas/kirby/kirby_atlas15.tres" type="Texture" id=16]
[ext_resource path="res://assets/atlas/kirby/kirby_atlas16.tres" type="Texture" id=17]
[ext_resource path="res://nodes/Boss.gd" type="Script" id=18]
[ext_resource path="res://assets/atlas/kirby/kirby_atk_04.tres" type="Texture" id=19]
[ext_resource path="res://assets/atlas/kirby/kirby_atk_02.tres" type="Texture" id=20]
[ext_resource path="res://assets/atlas/kirby/kirby_atk_06.tres" type="Texture" id=21]
[ext_resource path="res://assets/atlas/kirby/kirby_atk_03.tres" type="Texture" id=22]
[ext_resource path="res://assets/atlas/kirby/kirby_atk_01.tres" type="Texture" id=23]
[ext_resource path="res://assets/atlas/kirby/kirby_atk_00.tres" type="Texture" id=24]
[ext_resource path="res://assets/atlas/kirby/kirby_atk_05.tres" type="Texture" id=25]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.98369
height = 0.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 23 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 19 ), ExtResource( 25 ), ExtResource( 21 ) ],
"loop": true,
"name": "attacking",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.65615, 39.3417 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4.74881, 46.5763 )

[node name="KirbyBoss" type="KinematicBody2D"]
script = ExtResource( 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.32523, -7.66785 )
scale = Vector2( 4, 4 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -2.11893, -6.88651 )
scale = Vector2( -4, 4 )
frames = SubResource( 2 )
animation = "idle"
frame = 5
playing = true

[node name="PlayerCanAtk" type="Area2D" parent="."]
position = Vector2( -68.8302, 32.0254 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCanAtk"]
position = Vector2( 0, -45.676 )
shape = SubResource( 3 )

[node name="BossCanAtk" type="Area2D" parent="."]
position = Vector2( -46.073, -14.0763 )
collision_layer = 4
collision_mask = 2147483652

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossCanAtk"]
position = Vector2( 0, -0.374588 )
shape = SubResource( 4 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="PlayerCanAtk" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="PlayerCanAtk" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="BossCanAtk" to="." method="_on_BossCanAtk_body_entered"]
[connection signal="body_exited" from="BossCanAtk" to="." method="_on_BossCanAtk_body_exited"]
